--- a/index.html
+++ b/index.html
@@ -285,17 +285,7 @@
 </table>
 </div>
 
-<!--baner dolny-->
-<div style=" position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px;">
-<table  border=0 HEIGHT=920 WIDTH=100% >
-<td>
-</td>
-</table>
-<table  border=0 HEIGHT=80 WIDTH=100%  background="grafika/baner.gif">
-<td>
-</td>
-</table>
-</div>
+
 
 
 <!--pasek plywajacy 1-->
@@ -1405,6 +1395,22 @@
 <table  border=0 HEIGHT=790 WIDTH=100%>
 
 <td HEIGHT=790 width=100% BGCOLOR=white>
+</td>
+</table>
+</div>
+
+<!--baner dolny-->
+<div style=" position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px;">
+<table  border=0 HEIGHT=920 WIDTH=100% >
+<td>
+</td>
+</table>
+<table  border=0 HEIGHT=80 WIDTH=100%  background="grafika/baner.gif">
+<td>
+<center>
+<a href="indextelefon.html" target="_self">
+<h1>Link do wersji na telefon</h1></a>
+</center>
 </td>
 </table>
 </div>
