--- a/index.html
+++ b/index.html
@@ -1455,7 +1455,7 @@ FB- Paweł Sudoł
 </div>
 
 <!--menu korzystające z js-->
-<div style=" position: absolute; left: 0px; top: 165px;  bottom: 0px; opacity: 0.65;">
+<div style=" position: absolute; left: 0px; top: 165px;   opacity: 0.65;">
 
 <!--
 <TABLE BORDER=0 BGCOLOR=blue>  
