--- a/index.html
+++ b/index.html
@@ -1399,21 +1399,7 @@
 </table>
 </div>
 
-<!--baner dolny-->
-<div style=" position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px;">
-<table  border=0 HEIGHT=920 WIDTH=100% >
-<td>
-</td>
-</table>
-<table  border=0 HEIGHT=80 WIDTH=100%  background="grafika/baner.gif">
-<td>
-<center>
-<a href="indextelefon.html" target="_self">
-<h1>Link do wersji na telefon</h1></a>
-</center>
-</td>
-</table>
-</div>
+
 
 <!--tresc-->
 
@@ -1517,6 +1503,22 @@ link = 0
 </script>
 <script src="jsmenu.js"></script> 
 
+</div>
+
+<!--baner dolny-->
+<div style=" position: absolute; top: 0px;  right: 0px; bottom: 80px;">
+<table  border=0 HEIGHT=920 WIDTH=100% >
+<td>
+</td>
+</table>
+<table  border=0 HEIGHT=80 WIDTH=100%  background="grafika/baner.gif">
+<td>
+<center>
+<a href="indextelefon.html" target="_self">
+<h1>Link do wersji na telefon</h1></a>
+</center>
+</td>
+</table>
 </div>
 
 </body>
