--- a/indextelefon.html
+++ b/indextelefon.html
@@ -286,17 +286,17 @@
 </div>
 
 <!--baner dolny-->
-<div style=" position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px;">
+<div style=" position: absolute;  top: 0px; right: 0px; bottom: 0px;">
 <table  border=0 HEIGHT=1730 WIDTH=100% >
 <td>
 </td>
 </table>
 <table  border=0 HEIGHT=80 WIDTH=100%  background="grafika/baner.gif">
 <td>
-<center>
+
 <a href="index.html" target="_self">
 <h1>Link do wersji komputerowej</h1></a>
-</center>
+
 </td>
 </table>
 </div>
