--- a/index.html
+++ b/index.html
@@ -285,7 +285,18 @@
 </table>
 </div>
 
+<!--baner dolny-->
+<div style=" position: absolute; top: 0px; left:0px; right: 0px; bottom: 80px;">
+<table  border=0 HEIGHT=920 WIDTH=100% >
+<td>
+</td>
+</table>
+<table  border=0 HEIGHT=80 WIDTH=100%  background="grafika/baner.gif">
+<td>
 
+</td>
+</table>
+</div>
 
 
 <!--pasek plywajacy 1-->
@@ -1438,6 +1449,10 @@
 <a target="_blank" href="https://www.facebook.com/profile.php?id=100010153696292">
 FB- Paweł Sudoł
 </a>
+<a href="indextelefon.html" target="_self">
+<h1>Link do wersji na telefon</h1></a>
+
+
 </div>
 
 <!--menu korzystające z js-->
@@ -1505,20 +1520,7 @@ link = 0
 
 </div>
 
-<!--baner dolny-->
-<div style=" position: absolute; top: 0px;  right: 0px; bottom: 80px;">
-<table  border=0 HEIGHT=920 WIDTH=100% >
-<td>
-</td>
-</table>
-<table  border=0 HEIGHT=80 WIDTH=100%  background="grafika/baner.gif">
-<td>
-<a href="indextelefon.html" target="_self">
-<h1>Link do wersji na telefon</h1></a>
 
-</td>
-</table>
-</div>
 
 </body>
 </html>
