--- a/indextelefon.html
+++ b/indextelefon.html
@@ -285,7 +285,17 @@
 </table>
 </div>
 
-
+<!--baner dolny-->
+<div style=" position: absolute;  top: 0px; left:0px; right: 0px; bottom: 0px;">
+<table  border=0 HEIGHT=1730 WIDTH=100% >
+<td>
+</td>
+</table>
+<table  border=0 HEIGHT=80 WIDTH=100%  background="grafika/baner.gif">
+<td>
+</td>
+</table>
+</div>
 
 
 <!--pasek plywajacy 1-->
@@ -1436,6 +1446,9 @@
 <a target="_blank" href="https://www.facebook.com/profile.php?id=100010153696292">
 FB- Paweł Sudoł
 </a>
+<a href="index.html" target="_self">
+<h1>Link do wersji komputerowej</h1></a>
+
 </div>
 
 <!--menu korzystające z js-->
@@ -1507,21 +1520,7 @@ link = 0
 
 </div>
 
-<!--baner dolny-->
-<div style=" position: absolute;  top: 0px; right: 0px; bottom: 0px;">
-<table  border=0 HEIGHT=1730 WIDTH=100% >
-<td>
-</td>
-</table>
-<table  border=0 HEIGHT=80 WIDTH=100%  background="grafika/baner.gif">
-<td>
 
-<a href="index.html" target="_self">
-<h1>Link do wersji komputerowej</h1></a>
-
-</td>
-</table>
-</div>
 
 </body>
 </html>
