--- a/antymagia/index.html
+++ b/antymagia/index.html
@@ -5,89 +5,89 @@
 
 Antymagia- trochę treningu:
     <br>
-<a target="okno" href="1 Technika psi ball" > 1 Technika psi ball </a>
+<a target="okno" href="1 Technika psi ball.txt" > 1 Technika psi ball </a>
     <br>
-<a target="okno" href="2 Tarcza ochronna" > 2 Tarcza ochronna </a>
+<a target="okno" href="2 Tarcza ochronna.txt" > 2 Tarcza ochronna </a>
     <br>
-<a target="okno" href="3 Wodospad" > 3 Wodospad </a>
+<a target="okno" href="3 Wodospad.txt" > 3 Wodospad </a>
     <br>
-<a target="okno" href="4 Wyrocznia gwiazd" > 4 Wyrocznia gwiazd </a>
+<a target="okno" href="4 Wyrocznia gwiazd.txt" > 4 Wyrocznia gwiazd </a>
     <br>
-<a target="okno" href="5 Aura żywiołu" > 5 Aura żywiołu </a>
+<a target="okno" href="5 Aura żywiołu.txt" > 5 Aura żywiołu </a>
     <br>
-<a target="okno" href="6 Test nieskończoności" > 6 Test nieskończoności </a>
+<a target="okno" href="6 Test nieskończoności.txt" > 6 Test nieskończoności </a>
     <br>
-<a target="okno" href="7 Wielki komputer" > 7 Wielki komputer </a>
+<a target="okno" href="7 Wielki komputer.txt" > 7 Wielki komputer </a>
     <br>
-<a target="okno" href="8 Trening tendecji" > 8 Trening tendecji </a>
+<a target="okno" href="8 Trening tendecji.txt" > 8 Trening tendecji </a>
     <br>
-<a target="okno" href="9 Siła serca" > 9 Siła serca </a>
+<a target="okno" href="9 Siła serca.txt" > 9 Siła serca </a>
     <br>
-<a target="okno" href="10 Klucz" > 10 Klucz </a>
+<a target="okno" href="10 Klucz.txt" > 10 Klucz </a>
     <br>
-<a target="okno" href="11 Magiczna róża" >11 Magiczna róża</a>
+<a target="okno" href="11 Magiczna róża.txt" >11 Magiczna róża</a>
     <br>
-<a target="okno" href="12 Antymagia a wampiryzm" >12 Antymagia a wampiryzm</a>
+<a target="okno" href="12 Antymagia a wampiryzm.txt" >12 Antymagia a wampiryzm</a>
     <br>
-<a target="okno" href="13 Telewizja poza czasem i przestrzenią" > 13 Telewizja poza czasem i przestrzenią</a>
+<a target="okno" href="13 Telewizja poza czasem i przestrzenią.txt" > 13 Telewizja poza czasem i przestrzenią</a>
     <br>
-<a target="okno" href="14 Wrażenia wysłane blisko" >14 Wrażenia wysłane blisko</a>
+<a target="okno" href="14 Wrażenia wysłane blisko.txt" >14 Wrażenia wysłane blisko</a>
     <br>
-<a target="okno" href="15Obrazek" >15 Obrazek</a>
+<a target="okno" href="15Obrazek.txt" >15 Obrazek</a>
     <br>
-<a target="okno" href="16Zdobywanie bez końca punktów" >16 Zdobywanie bez końca punktów</a>
+<a target="okno" href="16Zdobywanie bez końca punktów.txt" >16 Zdobywanie bez końca punktów</a>
     <br>
-<a target="okno" href="17Fantazja na zawołanie" >17 Fantazja na zawołanie</a>
+<a target="okno" href="17Fantazja na zawołanie.txt" >17 Fantazja na zawołanie</a>
     <br>
-<a target="okno" href="18Mądrzy magowie" >18 Mądrzy magowie</a>
+<a target="okno" href="18Mądrzy magowie.txt" >18 Mądrzy magowie</a>
     <br>
-<a target="okno" href="19Obiekt myśl na sen" >19 Obiekt myśl na sen</a>
+<a target="okno" href="19Obiekt myśl na sen.txt" >19 Obiekt myśl na sen</a>
     <br>
-<a target="okno" href="20Próby i sukcesy" > 20 Próby i sukcesy</a>
+<a target="okno" href="20Próby i sukcesy.txt" > 20 Próby i sukcesy</a>
     <br>
 
  <br>
 Antymagia- Własna część nieba:
     <br>
-<a target="okno" href="antymagia2/1Anioł NLP" >1 Anioł NLP </a>
+<a target="okno" href="antymagia2/1Anioł NLP.txt" >1 Anioł NLP </a>
     <br>
-<a target="okno" href="antymagia2/2Zegarmistrz światła" >2 Zegarmistrz światła</a>
+<a target="okno" href="antymagia2/2Zegarmistrz światła.txt" >2 Zegarmistrz światła</a>
     <br>
-<a target="okno" href="antymagia2/3Inne wymiary" >3 Inne wymiary</a>
+<a target="okno" href="antymagia2/3Inne wymiary.txt" >3 Inne wymiary</a>
     <br>
-<a target="okno" href="antymagia2/4Mędrcy" >4 Mędrcy</a>
+<a target="okno" href="antymagia2/4Mędrcy.txt" >4 Mędrcy</a>
     <br>
-<a target="okno" href="antymagia2/5Labirynt" >5 Labirynt</a>
+<a target="okno" href="antymagia2/5Labirynt.txt" >5 Labirynt</a>
     <br>
-<a target="okno" href="antymagia2/6Dodatek jako wizja" >6 Dodatek jako wizja</a>
+<a target="okno" href="antymagia2/6Dodatek jako wizja.txt" >6 Dodatek jako wizja</a>
     <br>
-<a target="okno" href="antymagia2/7Poznać dramat" >7 Poznać dramat</a>
+<a target="okno" href="antymagia2/7Poznać dramat.txt" >7 Poznać dramat</a>
     <br>
-<a target="okno" href="antymagia2/8Opowieść o talentach" >8 Opowieść o talentach</a>
+<a target="okno" href="antymagia2/8Opowieść o talentach.txt" >8 Opowieść o talentach</a>
     <br>
-<a target="okno" href="antymagia2/9Proste spostrzeżenia" >9 Proste spostrzeżenia</a>
+<a target="okno" href="antymagia2/9Proste spostrzeżenia.txt" >9 Proste spostrzeżenia</a>
     <br>
-<a target="okno" href="antymagia2/10Źródło wizjonerów i spisków" >10 Źródło wizjonerów i spisków</a>
+<a target="okno" href="antymagia2/10Źródło wizjonerów i spisków.txt" >10 Źródło wizjonerów i spisków</a>
     <br>
-<a target="okno" href="antymagia2/11Poszukiwania ubierane" >11 Poszukiwania ubierane</a>
+<a target="okno" href="antymagia2/11Poszukiwania ubierane.txt" >11 Poszukiwania ubierane</a>
     <br>
-<a target="okno" href="antymagia2/12Ciekawość mocy" >12 Ciekawość mocy</a>
+<a target="okno" href="antymagia2/12Ciekawość mocy.txt" >12 Ciekawość mocy</a>
     <br>
-<a target="okno" href="antymagia2/13Skrzydła" >13 Skrzydła</a>
+<a target="okno" href="antymagia2/13Skrzydła.txt" >13 Skrzydła</a>
     <br>
-<a target="okno" href="antymagia2/14Ukryte światło" >14 Ukryte światło</a>
+<a target="okno" href="antymagia2/14Ukryte światło.txt" >14 Ukryte światło</a>
     <br>
-<a target="okno" href="antymagia2/15Kontakty chroniące" >15 Kontakty chroniące</a>
+<a target="okno" href="antymagia2/15Kontakty chroniące.txt" >15 Kontakty chroniące</a>
     <br>
-<a target="okno" href="antymagia2/16Nacieranie na ducha" >16 Nacieranie na ducha</a>
+<a target="okno" href="antymagia2/16Nacieranie na ducha.txt" >16 Nacieranie na ducha</a>
     <br>
-<a target="okno" href="antymagia2/17Duch a fantastyka" >17 Duch a fantastyka</a>
+<a target="okno" href="antymagia2/17Duch a fantastyka.txt" >17 Duch a fantastyka</a>
     <br>
-<a target="okno" href="antymagia2/18Kontakt włączony" >18 Kontakt włączony</a>
+<a target="okno" href="antymagia2/18Kontakt włączony.txt" >18 Kontakt włączony</a>
     <br>
-<a target="okno" href="antymagia2/19Skomplikowany aspekt prostego" >19 Skomplikowany aspekt prostego</a>
+<a target="okno" href="antymagia2/19Skomplikowany aspekt prostego.txt" >19 Skomplikowany aspekt prostego</a>
     <br>
-<a target="okno" href="antymagia2/20Nauczyciel" >20 Nauczyciel</a>
+<a target="okno" href="antymagia2/20Nauczyciel.txt" >20 Nauczyciel</a>
     <br>
 
 
