--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@
 
 <!--baner gorny-->
 <div style=" position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px;">
-<table  border=0 HEIGHT=120 WIDTH=100%  background="grafika/baner.gif">
+<table  border=0 HEIGHT=200 WIDTH=100%  background="grafika/baner.gif">
 <td>
 </td>
 </table>
@@ -287,11 +287,11 @@
 
 <!--baner dolny-->
 <div style=" position: absolute; top: 0px; left:0px; right: 0px; bottom: 80px;">
-<table  border=0 HEIGHT=920 WIDTH=100% >
+<table  border=0 HEIGHT=950 WIDTH=100% >
 <td>
 </td>
 </table>
-<table  border=0 HEIGHT=80 WIDTH=100%  background="grafika/baner.gif">
+<table  border=0 HEIGHT=120 WIDTH=100%  background="grafika/baner.gif">
 <td>
 
 </td>
@@ -1402,7 +1402,7 @@
 </div>
 
 <!--tlo do czytania-->
-<div style=" position: absolute; left: 10%; top: 121px; right: 10%; bottom: 0px; opacity: 0.5;">
+<div style=" position: absolute; left: 10%; top: 181px; right: 10%; bottom: 0px; opacity: 0.5;">
 <table  border=0 HEIGHT=790 WIDTH=100%>
 
 <td HEIGHT=790 width=100% BGCOLOR=white>
@@ -1415,7 +1415,12 @@
 <!--tresc-->
 
 <div style=" position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px;">
-<br>
+
+<!--menuklasyczne-->
+<iframe src="menuklasyczneclose.html" width="100%" height="80" frameborder="0" atrybut name="menuklasyczne" >
+
+    </iframe>
+
 <center>
 <TABLE BORDER=0  HEIGHT=80>  
 <td>
@@ -1482,7 +1487,9 @@ link 1
 
 <TABLE BORDER=0 BGCOLOR=blue>  
 <td>
+<a  target="menuklasyczne" href="menuklasyczneclose.html" >
 <p id="menu" onclick="myFunctionmenu()">menu</p>
+</a>
 </td>
 </TABLE>
 <a target="okno" href="start.html" >
