--- a/projekty/index.html
+++ b/projekty/index.html
@@ -1,5 +1,5 @@
 <html>
-<body link="black" vlink="white" alink="white">
+<body link="black" vlink="violet" alink="violet" >
 <center>
     <font size="2" color="black">
 
@@ -8,6 +8,8 @@ Projekty:
 <a target="okno" href="licznik ufnosci.html" > LICZNIK ufności</a>
     <br>
 <a target="okno" href="dzwieki podprogowe.html" > PODPROGOWE dzwięki</a>
+    <br>
+<a target="okno" href="Prestidigator program czytajacy w myslach.html" > PRESTIDIGATOR program czytającyw myślach</a>
     <br>
 
 
