--- a/projekty/Prestidigator program czytajacy w myslach.html
+++ b/projekty/Prestidigator program czytajacy w myslach.html
@@ -82,6 +82,7 @@ width:20px;
 </head>
 
 <body>
+<center>
 <br>
 Nauka zwana Logiką<br>
 inspiruje się matematyką<br>
@@ -90,6 +91,7 @@ można sprawić wrażenie<br>
 CZYTANIA W MYŚLACH!!!<br>
 to w przestrzeni myślenia logicznego<br>
 dlaczego by nie?<br>
+</center>
 <br>
 <br>
 
