--- a/projekty/Prestidigator program czytajacy w myslach.html
+++ b/projekty/Prestidigator program czytajacy w myslach.html
@@ -2,6 +2,14 @@
 
 <head>
 <style>
+
+        .relative {
+            position: relative;
+          
+            left: 300px;
+        }
+    <
+
 #generujproces {
 width:100%;
 
@@ -95,17 +103,20 @@ dlaczego by nie?<br>
 <br>
 <br>
 
-kliknij poniżej <br>
-<div id="generujproces" >
-<div id="Gklikacz" onclick="myFunction0()">G</div>
-<div id="Eklikacz" onclick="myFunction1()">E</div>
-<div id="Nklikacz" onclick="myFunction2()">N</div>
-<div id="E2klikacz" onclick="myFunction3()">E</div>
-<div id="Rklikacz" onclick="myFunction4()">R</div>
-<div id="Uklikacz" onclick="myFunction5()">U</div>
+<p class="relative" >kliknij poniżej </p>
+
+
+
+<div id="generujproces" class="relative">
+<div id="Gklikacz"  onclick="myFunction0()">G</div>
+<div id="Eklikacz"  onclick="myFunction1()">E</div>
+<div id="Nklikacz"  onclick="myFunction2()">N</div>
+<div id="E2klikacz"  onclick="myFunction3()">E</div>
+<div id="Rklikacz"  onclick="myFunction4()">R</div>
+<div id="Uklikacz"  onclick="myFunction5()">U</div>
 <div id="J2klikacz" onclick="myFunction6()">J</div>
 </div>
-<div id="generujproces2">
+<div id="generujproces2" class="relative" >
 <div id="Pklikacz" onclick="myFunction7()">P</div>
 <div id="R2klikacz" onclick="myFunction8()">R</div>
 <div id="Oklikacz" onclick="myFunction9()">O</div>
