--- a/projekty/Prestidigator program czytajacy w myslach.html
+++ b/projekty/Prestidigator program czytajacy w myslach.html
@@ -120,7 +120,7 @@ dlaczego by nie?<br>
 <div id="Pklikacz" onclick="myFunction7()">P</div>
 <div id="R2klikacz" onclick="myFunction8()">R</div>
 <div id="Oklikacz" onclick="myFunction9()">O</div>
-<div id="C2klikacz" onclick="myFunction010()">C</div>
+<div id="C2klikacz" onclick="myFunction010()">C E S</div>
 <!--<div id="E3klikacz" onclick="myFunction011()">E S</div>-->
 <!--<div id="Sklikacz" onclick="myFunction012()">S</div>-->
 
@@ -137,12 +137,30 @@ dlaczego by nie?<br>
 var generowana 
 generowana = 0
 
+function myFunction0() {
+generowana = 4
+
+    document.getElementById("tresc").innerHTML = "W celu synchronizacji z programem" + "<br>" +
+"dokonaj obliczeń" + "<br>" + "-pomyśl o liczbie dowolnej między 1 a 9" + "<br>" + "-pomnóż ją przez dwa" + "<br>"
++ "-dodaj 8 do tej liczby" + "<br>" + "-podziel liczbe przez dwa" + "<br>" + "-odejmij liczbe o której myślałeś na początku";
+    document.getElementById("obliczone").innerHTML = "kliknij bo obliczyłeś";
+}
+
+function myFunction1() {
+generowana = 3
+
+    document.getElementById("tresc").innerHTML = "W celu synchronizacji z programem" + "<br>" +
+"dokonaj obliczeń" + "<br>" + "-pomyśl o liczbie dowolnej między 1 a 9" + "<br>" + "-pomnóż ją przez dwa" + "<br>"
++ "-dodaj 6 do tej liczby" + "<br>" + "-podziel liczbe przez dwa" + "<br>" + "-odejmij liczbe o której myślałeś na początku";
+    document.getElementById("obliczone").innerHTML = "kliknij bo obliczyłeś";
+}
+
 function myFunction2() {
 generowana = 2
 
     document.getElementById("tresc").innerHTML = "W celu synchronizacji z programem" + "<br>" +
 "dokonaj obliczeń" + "<br>" + "-pomyśl o liczbie dowolnej między 1 a 9" + "<br>" + "-pomnóż ją przez dwa" + "<br>"
-+ "-dodaj 6 do tej liczby" + "<br>" + "-podziel liczbe przez dwa" + "<br>" + "odejmij jeden" + "<br>" + "odejmij liczbe o której myślałeś na początku";
++ "-dodaj 6 do tej liczby" + "<br>" + "-podziel liczbe przez dwa" + "<br>" + "-odejmij jeden" + "<br>" + "-odejmij liczbe o której myślałeś na początku";
     document.getElementById("obliczone").innerHTML = "kliknij bo obliczyłeś";
 }
 
@@ -151,7 +169,7 @@ generowana = 3
 
     document.getElementById("tresc").innerHTML = "W celu synchronizacji z programem" + "<br>" +
 "dokonaj obliczeń" + "<br>" + "-pomyśl o liczbie dowolnej między 1 a 9" + "<br>" + "-pomnóż ją przez dwa" + "<br>"
-+ "-dodaj 6 do tej liczby" + "<br>" + "-podziel liczbe przez dwa" + "<br>" + "odejmij liczbe o której myślałeś na początku";
++ "-dodaj 6 do tej liczby" + "<br>" + "-podziel liczbe przez dwa" + "<br>" + "-odejmij liczbe o której myślałeś na początku";
     document.getElementById("obliczone").innerHTML = "kliknij bo obliczyłeś";
 }
 
@@ -160,7 +178,7 @@ generowana = 4
 
     document.getElementById("tresc").innerHTML = "W celu synchronizacji z programem" + "<br>" +
 "dokonaj obliczeń" + "<br>" + "-pomyśl o liczbie dowolnej między 1 a 9" + "<br>" + "-pomnóż ją przez dwa" + "<br>"
-+ "-dodaj 8 do tej liczby" + "<br>" + "-podziel liczbe przez dwa" + "<br>" + "odejmij liczbe o której myślałeś na początku";
++ "-dodaj 8 do tej liczby" + "<br>" + "-podziel liczbe przez dwa" + "<br>" + "-odejmij liczbe o której myślałeś na początku";
     document.getElementById("obliczone").innerHTML = "kliknij bo obliczyłeś";
 }
 
@@ -169,7 +187,7 @@ generowana = 5
 
     document.getElementById("tresc").innerHTML = "W celu synchronizacji z programem" + "<br>" +
 "dokonaj obliczeń" + "<br>" + "-pomyśl o liczbie dowolnej między 1 a 9" + "<br>" + "-pomnóż ją przez dwa" + "<br>"
-+ "-dodaj 10 do tej liczby" + "<br>" + "-podziel liczbe przez dwa" + "<br>" + "odejmij liczbe o której myślałeś na początku";
++ "-dodaj 10 do tej liczby" + "<br>" + "-podziel liczbe przez dwa" + "<br>" + "-odejmij liczbe o której myślałeś na początku";
     document.getElementById("obliczone").innerHTML = "kliknij bo obliczyłeś";
 }
 
@@ -178,7 +196,7 @@ generowana = 6
 
     document.getElementById("tresc").innerHTML = "W celu synchronizacji z programem" + "<br>" +
 "dokonaj obliczeń" + "<br>" + "-pomyśl o liczbie dowolnej między 1 a 9" + "<br>" + "-pomnóż ją przez dwa" + "<br>"
-+ "-dodaj 12 do tej liczby" + "<br>" + "-podziel liczbe przez dwa" + "<br>" + "odejmij liczbe o której myślałeś na początku";
++ "-dodaj 12 do tej liczby" + "<br>" + "-podziel liczbe przez dwa" + "<br>" + "-odejmij liczbe o której myślałeś na początku";
     document.getElementById("obliczone").innerHTML = "kliknij bo obliczyłeś";
 }
 
@@ -187,7 +205,7 @@ generowana = 7
 
     document.getElementById("tresc").innerHTML = "W celu synchronizacji z programem" + "<br>" +
 "dokonaj obliczeń" + "<br>" + "-pomyśl o liczbie dowolnej między 1 a 9" + "<br>" + "-pomnóż ją przez dwa" + "<br>"
-+ "-dodaj 14 do tej liczby" + "<br>" + "-podziel liczbe przez dwa" + "<br>" + "odejmij liczbe o której myślałeś na początku";
++ "-dodaj 14 do tej liczby" + "<br>" + "-podziel liczbe przez dwa" + "<br>" + "-odejmij liczbe o której myślałeś na początku";
     document.getElementById("obliczone").innerHTML = "kliknij bo obliczyłeś";
 }
 
@@ -196,7 +214,7 @@ generowana = 8
 
     document.getElementById("tresc").innerHTML = "W celu synchronizacji z programem" + "<br>" +
 "dokonaj obliczeń" + "<br>" + "-pomyśl o liczbie dowolnej między 1 a 9" + "<br>" + "-pomnóż ją przez dwa" + "<br>"
-+ "-dodaj 16 do tej liczby" + "<br>" + "-podziel liczbe przez dwa" + "<br>" + "odejmij liczbe o której myślałeś na początku";
++ "-dodaj 16 do tej liczby" + "<br>" + "-podziel liczbe przez dwa" + "<br>" + "-dejmij liczbe o której myślałeś na początku";
     document.getElementById("obliczone").innerHTML = "kliknij bo obliczyłeś";
 }
 
@@ -205,7 +223,7 @@ generowana = 9
 
     document.getElementById("tresc").innerHTML = "W celu synchronizacji z programem" + "<br>" +
 "dokonaj obliczeń" + "<br>" + "-pomyśl o liczbie dowolnej między 1 a 9" + "<br>" + "-pomnóż ją przez dwa" + "<br>"
-+ "-dodaj 18 do tej liczby" + "<br>" + "-podziel liczbe przez dwa" + "<br>" + "odejmij liczbe o której myślałeś na początku";
++ "-dodaj 18 do tej liczby" + "<br>" + "-podziel liczbe przez dwa" + "<br>" + "-odejmij liczbe o której myślałeś na początku";
     document.getElementById("obliczone").innerHTML = "kliknij bo obliczyłeś";
 }
 
@@ -214,7 +232,7 @@ generowana = 1
 
     document.getElementById("tresc").innerHTML = "W celu synchronizacji z programem" + "<br>" +
 "dokonaj obliczeń" + "<br>" + "-pomyśl o liczbie dowolnej między 1 a 9" + "<br>" + "-pomnóż ją przez dwa" + "<br>"
-+ "-dodaj 6 do tej liczby" + "<br>" + "-podziel liczbe przez dwa" + "<br>" + "odejmij dwa" + "<br>" + "odejmij liczbe o której myślałeś na początku";
++ "-dodaj 6 do tej liczby" + "<br>" + "-podziel liczbe przez dwa" + "<br>" + "-odejmij dwa" + "<br>" + "-odejmij liczbe o której myślałeś na początku";
     document.getElementById("obliczone").innerHTML = "kliknij bo obliczyłeś";
 }
 
