--- a/menuklasyczneopen.html
+++ b/menuklasyczneopen.html
@@ -1,6 +1,6 @@
 <html>
-
-<h3>
+<center>
+<h1>
 <a  target="menuklasyczne" href="menuklasyczneclose.html" >
 Menu klasyczne zwiń: 
 </a>
@@ -22,6 +22,6 @@ Pierwsza |
 <a target="okno" href="metafizyka/index.html" >
  Metafizyka
 </a>
-</h3>
+</h1>
 
 </html>
