--- a/projekty/Prestidigator program czytajacy w myslach.html
+++ b/projekty/Prestidigator program czytajacy w myslach.html
@@ -266,7 +266,8 @@ if ( proba==2) {
 if ( proba>2) {
 
         document.getElementById("tresc").innerHTML = "wynik o którym myślałeś to " + generowana + "<br>" + "kliknij znów generowanie by jeszcze raz spróbować" +
-"<br>" + "<br>" + "!!!TO SZTUCZKA iluzjonistyczna!!! i piękno matematyki" + "<br>" + "idea którą tu używam " + "<br>" + "działa zawsze gdy działa matematyka!!!";
+"<br>" + "<br>" + "!!!TO SZTUCZKA iluzjonistyczna!!! i piękno matematyki" + "<br>" + "idea którą tu używam " + "<br>" + "działa zawsze gdy działa matematyka!!!" + "<br><br>"
++ "Umiesz liczyć więc" + "<br>" + "jeśli nie wyszło" + "<br>" + "to może być wyparcie" + "<br>" + "i warto zapamiętać swoje myśli to powodujące";
 
 }
 
