--- a/projekty/index.html
+++ b/projekty/index.html
@@ -1,7 +1,7 @@
 <html>
 <body link="black" vlink="violet" alink="violet" >
 <center>
-    <font size="2" color="black">
+    <font size="5" color="black">
 
 Projekty:
     <br>
@@ -10,6 +10,8 @@ Projekty:
 <a target="okno" href="dzwieki podprogowe.html" > PODPROGOWE dzwięki</a>
     <br>
 <a target="okno" href="Prestidigator program czytajacy w myslach.html" > PRESTIDIGATOR program czytającyw myślach</a>
+    <br>
+<a target="okno" href="Prestidigator sztuczki iluzjonistyczne.html" > PRESTIDIGATOR sztuczki iluzjonistyczne.html</a>
     <br>
 
 
