--- a/projekty/index.html
+++ b/projekty/index.html
@@ -11,7 +11,7 @@ Projekty:
     <br>
 <a target="okno" href="Prestidigator program czytajacy w myslach.html" > PRESTIDIGATOR program czytającyw myślach</a>
     <br>
-<a target="okno" href="Prestidigator sztuczki iluzjonistyczne.html" > PRESTIDIGATOR sztuczki iluzjonistyczne.html</a>
+<a target="okno" href="Prestidigator sztuczki iluzjonistyczne.html" > PRESTIDIGATOR sztuczki iluzjonistyczne</a>
     <br>
 
 
