--- a/projekty/Prestidigator sztuczki iluzjonistyczne.html
+++ b/projekty/Prestidigator sztuczki iluzjonistyczne.html
@@ -39,11 +39,13 @@ wewnętrznego dziecka i jego głębi
 <br>
 aby poczuć tą drobną zmianę w życiu codziennym
 <br><br>
+kliknij poniżej by uruchomić YT
+<br>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/hlJkBsQ-L_4?si=KNtDZdASN9jfYUtO" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 <br>
-Jeśli powyżej nie wyświetla się film
+Jeśli powyżej nie wyświetla się film 
 <br>
-<a  href="https://youtu.be/hlJkBsQ-L_4" >
+<a target="_blank" href="https://youtu.be/hlJkBsQ-L_4" >
 to kliknij w ten LINK
 </a>
 
