--- a/metafizyka/index.html
+++ b/metafizyka/index.html
@@ -16,6 +16,11 @@ i służące raczej jako inspiracja<br>
 na czasy gdy będe tego potrzebował<br>
 jednak można by ulepszyć forme tego przekazu<br>
 jeśli ktoś ma czas <br>
+<br><br>
+<a  target="_blank" href="https://drive.google.com/drive/folders/1hsPo-Nr6ua8QIugvomvA5yhwzINhccxt?usp=sharing" > Link do książki o metafizyce w nowym oknie</a>
+<br>
+(książka zredagowana przez chat gpt i copilot<br>
+zawiera zredagowane teksty pseudoheros i więcej)
 <br>
 
 </center>
