--- a/projekty/index.html
+++ b/projekty/index.html
@@ -13,9 +13,48 @@ Projekty:
     <br>
 <a target="okno" href="Prestidigator sztuczki iluzjonistyczne.html" > PRESTIDIGATOR sztuczki iluzjonistyczne</a>
     <br>
+  <br>  <br>  <br>
 
+Technomagia:
+    <br>
+<a target="okno" href="technomagia/01 rozdzka.txt" >01 rozdzka </a>
+ <br>
+<a target="okno" href="technomagia/02 Co umieja podswiadomosci.txt" >02 Co umieja podswiadomosci </a>
+ <br>
+<a target="okno" href="technomagia/03 Elektroniczna rozdzka.txt" >03 Elektroniczna rozdzka </a>
+ <br>
+<a target="okno" href="technomagia/04 Nieznane sposoby komunikacji.txt" >04 Nieznane sposoby komunikacji </a>
+ <br>
+<a target="okno" href="technomagia/05 Fizyczna szansa.txt" >05 Fizyczna szansa </a>
 
+<a target="okno" href="technomagia/06 Intuicja zyczliwa.txt" >06 Intuicja zyczliwa</a>
+ <br>
+<a target="okno" href="technomagia/07 Proste programy.txt" >07 Proste programy </a>
+ <br>
+<a target="okno" href="technomagia/08 Nasz swiat czescia swiata.txt" >08 Nasz swiat czescia swiata </a>
+ <br>
+<a target="okno" href="technomagia/09 Aura i polaczenia.txt" >09 Aura i polaczenia </a>
+ <br>
+<a target="okno" href="technomagia/10 Czający się potencjał.txt" >10 Czający się potencjał </a>
+ <br>
+<a target="okno" href="technomagia/11 Fantazja o polityce dla herosow.txt" >11 Fantazja o polityce dla herosow </a>
+ <br>
 
+<br><br>
+Technomagia cz.2:
+    <br>
+<a target="okno" href="technomagia cz.2/01 sztuczki iluzjonistyczne.txt" >01 sztuczki iluzjonistyczne</a>
+ <br>
+<a target="okno" href="technomagia cz.2/02 Trening many.txt" >02 Trening many</a>
+ <br>
+<a target="okno" href="technomagia cz.2/03 Skanowanie many.txt" >03 Skanowanie many</a>
+ <br>
+<a target="okno" href="technomagia cz.2/04 Magiczna wieza.txt" >04 Magiczna wieza</a>
+ <br>
+<a target="okno" href="technomagia cz.2/05 Pseudo polbog i spojnosc.txt" >05 Pseudo polbog i spojnosc</a>
+ <br>
+<a target="okno" href="technomagia cz.2/06 Dyscyplina.txt" >06 Dyscyplina</a>
+ <br>
 
 
 </center>
