--- a/start.html
+++ b/start.html
@@ -7,6 +7,13 @@
 Witam na mojej stronie<br>
 <br>
 <br>
+Uwaga! Strona nie jest zredagowana<br>
+jesli chcesz zredagowane treści<br>
+to jest tutaj pierwszy tom książki mojej zredagowany<br>
+(pozostałe trzy tomy są nie zredagowane)<br>
+zapraszam do działu metafizyka<br>
+a po kilkanaście moich tomików wierszy do działu PseudoPoeta<br>
+<br><br>
 Oco tu chodzi?:<br>
 <br>
 Niezwykłe istoty mają pewien dar<br>
